# structparams_inference_biases

./: .gitignore  circular_exp_fitting.ipynb  circular_sersic_fitting.ipynb  elliptical_exp_fitting.ipynb  elliptical_sersic_fitting.ipynb  exp_gen_experiments.ipynb  pixi.toml  pyproject.toml  sersic_integral_experiments.ipynb  simplified_experiment.ipynb
