[tool.poetry]
name = "structparams-inference-biases"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
jupyterlab = "^4.2.5"
dynesty = "^2.1.4"
emcee = "^3.1.6"
corner = "^2.2.2"
astropy = "^6.1.2"
tqdm = "^4.66.5"
ipywidgets = "^8.1.5"
sympy = "^1.13.2"
regions = "^0.9"
photutils = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
